<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_2">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="@dimen/space_4"
        android:text="@string/name"
        android:gravity="center"
        android:textColor="@drawable/mr_button_light"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/town_code"
        app:layout_constraintEnd_toStartOf="@+id/category"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_4"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/town_code"
        app:layout_constraintEnd_toStartOf="@+id/mobile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_4"
        android:text="@string/mobile_no"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/town_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/category"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/town_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_4"
        android:text="@string/town_code"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/address"
        app:layout_constraintEnd_toStartOf="@+id/speciality"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/speciality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_4"
        android:text="@string/spec"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/address"
        app:layout_constraintEnd_toStartOf="@id/drDesign"
        app:layout_constraintStart_toEndOf="@id/town_code"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/drDesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_4"
        android:text="@string/drdesign"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/speciality"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_4"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/town_code"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/space_30"
        android:layout_marginTop="@dimen/space_2"
        android:layout_marginBottom="@dimen/space_2"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address" />

</androidx.constraintlayout.widget.ConstraintLayout>